welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:27: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.FlowerCase'
override def run() {grosPot(); gauche(); recule(); droite(); while (!estDosMur) {recule()}; droite(); droite(); avance(4); gauche(); grosPot()} 
             ^